Ottimizzazione generale sulla logica applicativa e sulle dipendenze dell'infrastruttura in base all'esito dei test effettuati nei giorni precedenti